--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ openssl = "0.10.64"
 serde = { version = "1.0", features = ["serde_derive"] }
 serde_json = "1.0"
 futures = "0.3.30"
-reqwest = "0.12.4"
+reqwest = { version ="0.12.4", default-features = false, features = ["rustls-tls"]}
 # serde = { version = "1.0.202", features = ["derive"] }
 # serde_json = "1.0.117"
 tokio = { version = "1.37.0", features = ["full"] }
